<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frame_update_stt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@android:color/black"></FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/gray_border_box"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="26dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="right"
            android:src="@drawable/ic_cancel" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_update_order_status" />

            <vn.app.tintocshipper.config.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/update_status_order"
                android:textAllCaps="true"
                android:textColor="@color/colorShopInfoOne"
                android:textSize="16sp"
                app:font_family="segoe_semi_bold" />

            <vn.app.tintocshipper.config.MyTextView
                android:id="@+id/txt_order_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:textAllCaps="true"
                android:textColor="@color/txt_title"
                android:textSize="14sp"
                app:font_family="segoe_semi_bold"
                android:visibility="gone"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="vertical">

                <vn.app.tintocshipper.config.MyButton
                    android:id="@+id/btn_send_success"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/shipper_info"
                    android:text="@string/send_success"
                    android:textColor="@color/txt_title"
                    android:textSize="14sp"
                    app:font_family="segoe_semi_bold" />

                <vn.app.tintocshipper.config.MyButton
                    android:id="@+id/btn_cancel_order"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/shipper_info"
                    android:text="@string/unsuccess_ship"
                    android:textColor="@color/txt_title"
                    android:textSize="14sp"
                    app:font_family="segoe_semi_bold" />

                <vn.app.tintocshipper.config.MyButton
                    android:id="@+id/btn_return_order"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/shipper_info"
                    android:text="@string/cancel_shipping"
                    android:textColor="@color/txt_title"
                    android:textSize="14sp"
                    app:font_family="segoe_semi_bold" />

                <vn.app.tintocshipper.config.MyButton
                    android:id="@+id/btn_back_receive_success"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/shipper_info"
                    android:text="@string/return_success"
                    android:textColor="@color/txt_title"
                    android:textSize="14sp"
                    app:font_family="segoe_semi_bold" />

                <vn.app.tintocshipper.config.MyButton
                    android:id="@+id/btn_back_cancel_order"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/shipper_info"
                    android:text="@string/cancel_return"
                    android:textColor="@color/txt_title"
                    android:textSize="14sp"
                    app:font_family="segoe_semi_bold" />

                <vn.app.tintocshipper.config.MyButton
                    android:id="@+id/btn_recive_success"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/shipper_info"
                    android:text="@string/receive_success"
                    android:textColor="@color/txt_title"
                    android:textSize="14sp"
                    app:font_family="segoe_semi_bold" />

                <vn.app.tintocshipper.config.MyButton
                    android:id="@+id/btn_recive_faild"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/shipper_info"
                    android:text="@string/receive_nextime"
                    android:textColor="@color/txt_title"
                    android:textSize="14sp"
                    app:font_family="segoe_semi_bold" />

                <vn.app.tintocshipper.config.MyButton
                    android:id="@+id/btn_cancel"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/shipper_info"
                    android:text="@string/cancel_receive"
                    android:textColor="@color/txt_title"
                    android:textSize="14sp"
                    app:font_family="segoe_semi_bold" />


            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:background="@color/shipper_info"
            android:orientation="horizontal">

            <vn.app.tintocshipper.config.MyEditText
                android:id="@+id/edt_reason"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:layout_weight="9"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:hint="Nội dung cập nhật"
                android:textSize="12sp"
                android:background="@android:color/transparent"
                app:font_family="segoe_italic" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:background="@drawable/ic_plus"
                android:layout_height="match_parent"
                android:layout_weight="1"/>


        </LinearLayout>

        <vn.app.tintocshipper.config.MyButton
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/bg2_color"
            android:text="@string/stt_send"
            android:textColor="@color/colorTextWhite"
            android:textSize="16dp"
            app:font_family="segoe_semi_bold" />

    </LinearLayout>

</FrameLayout>