<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="1dp"
    android:background="@drawable/gray_border_square_box">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <vn.app.tintocshipper.config.MyTextView
                android:id="@+id/txt_order_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:singleLine="true"
                android:text="@string/order_code"
                android:textColor="@color/txt_title"
                android:textSize="10sp"
                app:font_family="segoe_semi_bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <vn.app.tintocshipper.config.MyTextView
                android:id="@+id/txt_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/address"
                android:textColor="@color/txt_title"
                android:textSize="10sp"
                app:font_family="segoe_semi_bold" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/color_black">

    </View>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <vn.app.tintocshipper.config.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:text="@string/total_income"
                android:textColor="@color/color_black"
                android:textSize="10sp"
                app:font_family="segoe_regular" />

            <vn.app.tintocshipper.config.MyTextView
                android:id="@+id/txt_total_income"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:text="10.000.000 VND"
                android:textColor="@color/txt_title"
                android:textSize="10sp"
                app:font_family="segoe_semi_bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <vn.app.tintocshipper.config.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:singleLine="true"
                android:text="@string/money_advance"
                android:textColor="@color/color_black"
                android:textSize="10sp"
                app:font_family="segoe_regular" />

            <vn.app.tintocshipper.config.MyTextView
                android:id="@+id/txt_money_advance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/money_advance"
                android:textColor="@color/txt_title"
                android:textSize="10sp"
                app:font_family="segoe_semi_bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>